# ChangeLog for dev-python/unicodecsv
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/unicodecsv/ChangeLog,v 1.5 2015/04/14 03:04:06 patrick Exp $

*unicodecsv-0.11.1 (14 Apr 2015)

  14 Apr 2015; Patrick Lauer <patrick@gentoo.org> +unicodecsv-0.11.1.ebuild:
  Bump

*unicodecsv-0.11.0 (16 Mar 2015)

  16 Mar 2015; Patrick Lauer <patrick@gentoo.org> +unicodecsv-0.11.0.ebuild:
  Bump

  09 Mar 2015; Pacho Ramos <pacho@gentoo.org> unicodecsv-0.9.4.ebuild:
  x86 stable, bug 540290

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> unicodecsv-0.9.4.ebuild:
  amd64 stable, bug 540290

*unicodecsv-0.9.4 (02 Sep 2014)

  02 Sep 2014; Patrick Lauer <patrick@gentoo.org> +metadata.xml,
  +unicodecsv-0.9.4.ebuild:
  Initial import, dependency of dev-python/blaze