@@ -1,8 +1,10 @@
 DIST unicodecsv-0.11.0.tar.gz 9196 SHA256 d7bbbed2a99c2b20db048c8a9c5291b8f6e863280d5e465ecd7a216c6282e37f SHA512 5f82c434a3092a2c4266591e9a0cee9d382c709835c5fbe04576a795024e07e7ac241ccdc09c8319d940b22eed800051a935d3a7e8d92c986c7c4825a641853a WHIRLPOOL 8412dc2e967816e034391bceca97fbccddb7c8d8a8d1e9072ad9a698af3cb13dd9aae6d7f6833cc5310720fba41b99c8957932c3aebbbbada6db7b5a63aa82de
 DIST unicodecsv-0.11.1.tar.gz 9251 SHA256 cc1f5af069588b65a05b8ef03b82f6c1b3bd7ced29f7a60c5aced42e1ea84f9c SHA512 4a1f0e0fd1f963df4719e7df7c90357faa55399fbede94e9c1858f6862e4d45266adba81e09faeae0589ddd25be873fecbec6fae305e0b2cc950b5646691368b WHIRLPOOL b4d8a70a850d92624a4065facbc2e45d0b6ae69a135cf9a072a87bf8c1d3710f49d8b8a501f87edccc21c19a2d416e3c746042001f1a7e4c3049140e78ef3aad
+DIST unicodecsv-0.12.0.tar.gz 9372 SHA256 b0b7513c33e658cf8e96a55ae18b7be0cf756ca7bfa39b3e4178a1a13edf5e04 SHA512 54a930ecfcec0ef6b91f855fae7e409618a541863953493921ec28f15e26f545c44dab779ee88acb247c28e8e981e958759716337a2ffee63df866f65e4dbd36 WHIRLPOOL 7bacf19554f12931d0f624a53787aa8d9cc394fb7b6cc115b908487419449f06e4b2789dcfd2c451f81ad1a23334e6185deffdf3876ece4c4cb53e8752854379
 DIST unicodecsv-0.9.4.tar.gz 9070 SHA256 0272570bc2b302093d9ac6e1171fc07862f7ac938146bb6152d8dfe20eeafd9b SHA512 2b0f4a602d68bd8bcbbeb9c7cbd2c9f3b43ca87e73816c40912b75a5c265739902e67b67f9946f1ef572ee99376cecdd7ce5a343216a32a86f25e0860251d828 WHIRLPOOL d3f47eb88ee1dac3fcafc2b9cb22619d310bae9dc6ba467526e7630cea7d57e02ad1139d1e4f6152f9cefc7030aed3d9f61ffec9052f59c44dd5a0108348f638
 EBUILD unicodecsv-0.11.0.ebuild 560 SHA256 f1fca5bfac76f86b8274762d9f855648469d439a010c2f90f8766274a22bf186 SHA512 e5ba164a137356bfb59e97e59cd90db010de9fe3053aa37e1259bdef37824c828b42d3bfe63beeab15e9267e51f9ee7fe0600579fee760e3ab6657c3ce65e523 WHIRLPOOL ea9ae621d07d96b77b4ff9cc0595ce22024f96f972f4e6f5a189e10d5ccca0eaa45e088fed8b074704b1c465c080800119f2e542a5bd8bc685f0f263b3047ec4
 EBUILD unicodecsv-0.11.1.ebuild 560 SHA256 d650d65b0d515f03f57bb2891644828bd373aa6dc923b7b8a201a235536d548e SHA512 e84b9adf628a1ba66fa99e5f59ba107a11c1e6c15c0e2edcfbd3d4a685b6bdef2d012a9d801c35f6219a1c0f274bb3bb74a0be3a0e6b2e7e54160112b73ffcee WHIRLPOOL c24dc8355a1f3d2a049c225c03655b40193a72bba040007756ee943e3fcb221431373617eb2475f17a4f63947a45e30acc7890f392c2c6a69c38f2744ae4b826
+EBUILD unicodecsv-0.12.0.ebuild 560 SHA256 e84ec9c4b41cac4343aeadca592b462d2a04cbbeaa31ee367f86432b2b07b3a4 SHA512 8c11750556ee2a9eadcf770707acb6dfa6732e3573695eee6464c48e5f3663740d21e93db409cd271536ef5f40719f8d56860de963e2f2ed676014cfd21d50d4 WHIRLPOOL 4f90059060eeecbd0a52f3db9c95c9f357aa72d301fd63be49a879a4775fe94b5a2c3ca15e8d6b4d3a050b1939c75cd73bf0e443c0406fb40a49d2932b37cbaa
 EBUILD unicodecsv-0.9.4.ebuild 555 SHA256 9d4178469ed214e9824de2e12f2dc2082f97a9468090b4bef2b4a2c5e2a9849e SHA512 70d468d44c9b1c6bdce5cfc8acce6b452892c6c062b260821827f2f6a2f08396af5c035c210816368ee153e0407834cc5a51e3745e3f852423df84ccddcb2874 WHIRLPOOL 838a40576cf38f26d582047c41995e433cef24716eb029a3e559c8b568eebe024a9512647448df88d746471f396c498d3a8ef3431f100c7203c41b73b06e2bf8
-MISC ChangeLog 825 SHA256 7db7cd05d0c975bd1084f71a5086108299c144e0ac99a8097cc15c0ce9aa58f0 SHA512 2a0c16510f04d6f1b55a13e51de7ceeb8b779a3aebe7aef984f294adb135bd1bdab0be63a2b8c95e7fc7c37ad182b38f4185a6d3db65318d842572f1f855aa92 WHIRLPOOL ad535507d000de4f45d611c59d98e2ef93b318a84251e68660723ae8d58bf234e7ea85b17837c0bcf66041f37ac96250b77690e619d70270a942a2541c2aa1fc
+MISC ChangeLog 944 SHA256 f4cf807eb43dcbf97e8ecfdbe9c17cf9bfa0c8beeecdf3328ef5c1e138c6f6d4 SHA512 e1317525642a31f5cd26c48087b0fb576b1bafada86583549001297e7e7eb4c1db9c22921f39ef319bcbb80a9eb8e158eda8ae2a48b43e2653f2a51ba9d97dda WHIRLPOOL 45fe576a58f390522151d4135aff816b3f9aa2bad045f778b7619ca661135b1070b26cc91b1538cd0b98a8cf4ab234eff01f604c15ee8eeece42af90aefb722e
 MISC metadata.xml 233 SHA256 11e638e6f09e61275fa6b844e23d47d264f45b8ec79709d4ea10d21e3a763e35 SHA512 e8cc6d0073732520a16beb124d7e8046ee173257313a02c36de6159861a3466e0aeff0ccd20c097c0cc0aa449ed053d9d181d33ecdf0f44a0fd484f01210a82f WHIRLPOOL 07d16f62eaf8942b639c39b03de899452ad1ef6e7b0060e973b89603c984eebf47e2a859419e956877fc23794757525d43ee66242c0f105ad47670f2392786bc
