@@ -4,6 +4,6 @@ DIST puzzles-r9306.tar.gz 2975070 SHA256 940d0e6c16d1c7aaf27d375356da3e73ae55607
 DIST puzzles-r9861.tar.gz 3255388 SHA256 cc08ffd96c20dfe249d6db0e97f32608e8c52da9ca00a0e8d7d67fd4a474c3a2 SHA512 fc8abf5912e7ecdf5c5166c6b8f354e5f6dc8c42d646ffeae812c3cea21496f9ff03671268453a32c3246d1c94dfaba83628bf65ebeb645b3deb208ee3045ba1 WHIRLPOOL 1f91bc25d5c8dbf531d71eb3783169477834c232810f529cf682d69a121688584af7dc51b00c380e85dfee3119f9644d2f741f4c9f9dfc2054bc72fa5dd88de5
 EBUILD sgt-puzzles-9306.ebuild 1853 SHA256 ba341883ea6452733928e154afdfdcb0de883b523ee8eb65ecdc3073ea1a1b57 SHA512 8c90fb26b94904292987283d6cbb89636af0eb2b250a7fa5579eb500264fcd6c8f53d9dd1403468a04433b61b00a7cf1cf3f03e2d3ec0c7961f20ff39c36ea77 WHIRLPOOL b03351e7bec9ae6b79d290623db8b7ef803ae3eb41c1fa0614c5b2be4fc425eeb5099f4691a0c926d9e4c432a28782225133916ea8e94a31abb9ef9ecbf79a65
 EBUILD sgt-puzzles-9861.ebuild 2112 SHA256 a39afcce88d8bfe019d4b3d95b297fd14f58012d96166979880e71c78027ad40 SHA512 5deb4b5a270044af8fd920e7abf6b5ba187590c6fd1548c45bf23a9ce14ed6cd246de48081ab19f60fcc57d9406b26778920e9fdf2568e802eb50c8fc1e6a96c WHIRLPOOL 000e22379d5686bd38db92d80c0b4d4f15c7cee5e8fafaa127e21237b57060be6ec7545a385ff95b15961f97fb4e287b5be1789fdc4d5422758e55ae96f3cc39
-EBUILD sgt-puzzles-99999999.ebuild 1924 SHA256 bd9844ba3217dc3ebccc254d8902550dc162d02af2886db3679ee2ab4dedbbd2 SHA512 e5cea540e0f338c83e3beba738582d79a4665c06b7941137100a8b582f1652d31c74868818866e0bc23b82fc3e05468cc1a9ecb65133831bb145d3a4943dde19 WHIRLPOOL 6e3d686cd341a9108240691911f4bc232d3eab1e23e2db75e1f6edb599c9f0ab461c0bc0d177e44b06414051d2a8f770fceca3e59823cf541813653907cde68e
-MISC ChangeLog 2891 SHA256 3b356d19b606d73dad7ccb8eea5dccfb3817f76c57ccd0266fab45247036b85b SHA512 a31949816e8654d47fc36794de5673d7d4bc740c320f574b817946859aa47122fb7586d5eb846040c9353a2f8edb5bd94336a8e904fe8e3fc86971f124e20150 WHIRLPOOL baed07570fcb2042ac28ad725737a2b4a6e9e25bca2c429287085ba0f277d6d1ad542ffa63a266d4079ff6cb1c28233bd6eec01776feb45e5711ac39a81568c2
+EBUILD sgt-puzzles-99999999.ebuild 2284 SHA256 9c6ac9df0e175fb3ab77e9bf2d4d0f7f95797c4eb8ce72ffca978a1b51036c77 SHA512 c06d8021b5b6dac35f52d8705e40956cf9e706b7e888ec8bf719aa43278a7e62d78233a07bb102f4cc54c53d54affafe0a20882e0a48806990b3a8d20375836c WHIRLPOOL bdf5a14c6920b5d7ff0f3924f2a7c3bc8f7b8de699d09f861273655714a6481b14ab9fbb635a6ee5a700270874fa5de5da4db7a40b37f5ecdb1cc9a0e1d01d0d
+MISC ChangeLog 3135 SHA256 8afbf17f248aa70bd24be2f967147942efb87bd1ed2c594d3dad6cef84f6b305 SHA512 7c42f7a7ca23b1e6172a2887c9c73aca0ff3c1e6cf9416bbd2f6bca8b042205a84dc68ddcff638d5cc218ce2cc127e741032458a243c0ab9d5ab77ae0f85b060 WHIRLPOOL f94ce4063e967ef4818f0d1666beae29608a9185959ddaffdbffe065636a9401e7b57af2d6d122a78df2cd58c350a17fe92b8052af320ed10088cb86f063c87f
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
