@@ -1,11 +1,11 @@
-DEFINED_PHASES=compile configure install postinst preinst prepare setup unpack
-DEPEND=x11-libs/gtk+:2 dev-lang/perl virtual/pkgconfig doc? ( >=app-doc/halibut-1.0 ) || ( dev-vcs/subversion[http] dev-vcs/subversion[webdav-neon] dev-vcs/subversion[webdav-serf] ) net-misc/rsync
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup unpack
+DEPEND=x11-libs/gtk+:2 dev-lang/perl virtual/pkgconfig doc? ( >=app-doc/halibut-1.0 ) >=sys-apps/sed-4 !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 >=dev-vcs/git-1.8.2.1
 DESCRIPTION=Simon Tatham's Portable Puzzle Collection
-EAPI=2
+EAPI=5
 HOMEPAGE=http://www.chiark.greenend.org.uk/~sgtatham/puzzles/
 IUSE=doc
 LICENSE=MIT
 RDEPEND=x11-libs/gtk+:2 games-misc/games-envd
 SLOT=0
-_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	9fb270e417e0e83d64ca52586c4a79de	games	1ad3205dbf62a2c98249f2f59b0a2d39	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	subversion	c12bdf4fcc82f86ad89b14c8f76c4026	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=a16ac46eb47cc6053991ff17e4e55f62
+_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	9fb270e417e0e83d64ca52586c4a79de	games	1ad3205dbf62a2c98249f2f59b0a2d39	git-r3	3a2bd0ae504c33a50061885480f3def3	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=a491cacb65b6bb8b092558d62d4d0131
