@@ -1,11 +1,0 @@
-DEFINED_PHASES=compile install prepare setup
-DEPEND=virtual/pkgconfig
-DESCRIPTION=Daemon to control the speed and voltage of CPUs
-EAPI=5
-HOMEPAGE=http://www.deater.net/john/powernowd.html
-KEYWORDS=amd64 ppc ~ppc64 x86
-LICENSE=GPL-2
-SLOT=0
-SRC_URI=http://www.deater.net/john/powernowd-1.00.tar.gz
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	linux-info	2b8c53f6065bdee2d757472215a3088f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=060525c672f27878b291c81a503d3182
