@@ -6,14 +6,13 @@ AUX powernowd.confd 977 SHA256 e92fb5d82ac80b8a5c831c3e48e05802bf90acd9aaf4aeaa1
 AUX powernowd.initd 510 SHA256 115155bc106e643a8cab39922c44c6b5e494bef1c43903f9c1a2bbfbcb1f895d SHA512 04955a6d67214f17a6af0ff8e243a3ee108ae7cd978c8a3081a3b5caf85551c4dbd8bd5bb2ab718b40a59ab33993c1e77cfe27bf96c207465e079145d4f0d59f WHIRLPOOL 4d82704381b5bc8660168223fda02261db9e2af2166a2b0ce6e3e2b905b745213f087bf0c715216effa6516600e5de788b8fc66d67db8a09e8919da1eccac389
 AUX powernowd.service 121 SHA256 d52afffa25458e2e238209e5f7b3a5ddccc19c83350f650d7c5feb348e7e6b2b SHA512 c6593dbf90c9174c62eff6a19ed24885f7c190a51c4812f6988b51de6512d4d9728be3d2ae576f13fff42f3b90853750c8805a9ee6a28677a9f7508e0cca1886 WHIRLPOOL 8f2b88fd3593c4ab77b30dc6a70cd6c49a64be5a6aef00e9ef399c96b260e4f7ae92877bcc94eda5a29c0e7644391fa91f657d3dfe74e414713ece5ce42a528a
 DIST powernowd-1.00.tar.gz 19651 SHA256 af7381d2def69aaf7a07e883bebc37141d1b5ca1bb959bfd4bf7015767b6c46d SHA512 b4285de6b330927568ac44789ae4fda0cb431fc5f15abc5d275c03b5bfaec8627f453abbe78561971cce1eba895f73ed6f382be8a034fc2cf5d1a55010d30cf3 WHIRLPOOL 038597f30b63adaa1a28cb10cb0e9c9dc2fdceca0f6392a1b14314aecb4271eb32de4dba0cbbe40d9acea5d5feb8a62fb70c4d596dc26d76fcfbc0c3fec089f5
-EBUILD powernowd-1.00-r2.ebuild 907 SHA256 575f872a8ee3f07650d623043418c7e7d6604ab512360c034a79cb13b074be8a SHA512 935806764c4edb109e5ef0141b68cc3aea94ce564fa5d6756d9eaebb4ca5b4b601315796aebd8312856da25c9b47d519a4f56b517ff98099dc384ea09c70f3fa WHIRLPOOL 981d37d598ed0ab4db0c35fa6b0ca46bf20395c1335302a63e91355948d4ffd3dfcaa69cb31b13fe9dddb5551e98bcf66a68205d61a3092c5d1ac7ac868844f1
 EBUILD powernowd-1.00-r3.ebuild 981 SHA256 8df490f91eea679c33df907345641c8f72e5b2e8243d86a3bde846b8333ab496 SHA512 b637bb5eae36ae7a02ff68fe067c1a0b0fe38cbf4ec406c850bc00c47e5c5907efde6e55993a54b08e0b9edca3d01ca980db1cd4a15cc5f47658e8eb9678dd51 WHIRLPOOL 96e93a5aa57fc7f54cd25d70c35fdab3d3e5f72e9eccd4eda01bca553e2d2589cdbc25175ef570101fc656526dd875a2bd2a9da2f36bd942da67b20c9ccb98ec
-MISC ChangeLog 4384 SHA256 13d2a4009e56613b4f8114b54e3cf6c2e9c2f4679d2977a69bfdbe9d62334ffa SHA512 c4227621832bdac2992d1c17ff40f2fe4f23323bbb3086901286afc3f023c04c32e83bfea4c3619e4d0fbaaf109611e3fd3586d9dec9627b0bc5e30a0ec3d9ff WHIRLPOOL 1477ed3aea684e67b0186e6248a1ea714f343e1b239a5e3e0a3695218fffbebea5f3d7f5faf4161c9a5691894e513e0d9d52b8c6a6a0782b8895fb73e8206469
+MISC ChangeLog 4464 SHA256 21b5e0408965cafd1b91d0b656cf5748d9b3bdba01e1e03e29e5ebbfbe4b6ede SHA512 a91d4c99a834339908a88bec9bf773acc30f60c541da9d29dd5e5a65e089007db89771c66b74c005d32b3f8a0be6fcc8e61918efd8aa3ac8ca8d21e4ac710968 WHIRLPOOL 6c7ba0040e3ea2b1ea4d740fdcd8ef43a7325fdeecbf9b2430a2575784b153d95087b0d19184fc63e5d89515f4763d6511b9fa5776218bec88b0bb944ae17306
 MISC metadata.xml 194 SHA256 67e29c7f0a8853218d4963468c7842084df20b8d8c6c1c2e9e0ae5c663b00644 SHA512 ffec1826a08b702e9055280547e4af1dd4203da9f423238191b87095beb378dc25de6c7a9a57773fd1e442be5fd9939072773afd615c2bcf57c01822f97d70f8 WHIRLPOOL 3576649f09a7bd5a5034c9320b5ec48ce767a65bad07a2ca458e67840fcd703a7d7098f8a6a9e043003712e492b8618287f5c24d9a4bb071d25bb9b340911c0c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUzdcMACgkQCaWpQKGI+9RUtgCeOZetWEPFvGJeGjyBcLTZK4ks
-/PIAnR7XdQ/cq2oWBAwOXL68EU6C1JD+
-=rcj7
+iEYEAREIAAYFAlU0eDQACgkQVWmRsqeSphOugQCfZHncGXBOMMPgLuGM4tE/+MDn
+RDIAn3l4mbadojvoLc4sFdKEHymTt9Uj
+=gjmZ
 -----END PGP SIGNATURE-----
