@@ -1,6 +1,14 @@
 # ChangeLog for games-puzzle/sgt-puzzles
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/sgt-puzzles/ChangeLog,v 1.16 2013/06/13 04:12:11 mr_bones_ Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/sgt-puzzles/ChangeLog,v 1.18 2015/04/20 03:58:09 mr_bones_ Exp $
+
+  20 Apr 2015; Michael Sterrett <mr_bones_@gentoo.org>
+  sgt-puzzles-99999999.ebuild:
+  improve desktop entry name
+
+  20 Apr 2015; Michael Sterrett <mr_bones_@gentoo.org>
+  sgt-puzzles-99999999.ebuild:
+  convert to git; also fixes bug #532604
 
 *sgt-puzzles-9861 (13 Jun 2013)
 
