@@ -1,6 +1,9 @@
 # ChangeLog for sys-power/powernowd
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/powernowd/ChangeLog,v 1.29 2015/04/19 09:30:42 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/powernowd/ChangeLog,v 1.30 2015/04/20 03:53:22 jer Exp $
+
+  20 Apr 2015; Jeroen Roovers <jer@gentoo.org> -powernowd-1.00-r2.ebuild:
+  Old.
 
   19 Apr 2015; Pacho Ramos <pacho@gentoo.org> powernowd-1.00-r3.ebuild:
   x86 stable wrt bug #535686
